--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
     <li>Edad: 25 años</li>
         <li><img src="img/phone-handset_icon-icons.com_48252.png" width="25" alt="icon phone"><span>   2646211456</span></li>
         <li><img src="img/logo_gmail_envelope_letter_email_icon_143171.png "  width="25" alt="icon email"><span>        ismaelpiro38@gmail.com</span></li>
-        <li>San Juan Barreal - "Barrio Matas Manzana "A" Casa 12".</li>
+        <li>Argentina San Juan Calingasta  .</li>
     </ul>
     </div>
     <div class="cuerpo" >
