--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,7 @@
             <img src="img/Imagen de WhatsApp 2025-10-31 a las 16.53.17_c6bf8822.jpg" width="200" alt="">
         <img src="img/Imagen de WhatsApp 2025-10-31 a las 16.53.17_c841fcb1.jpg"  width="200" alt="">
     </div>
-    <h4>Certificados de capacitación</h4>
+    <h4>Certificados de capacitación.</h4>
         <div class="imgcertificado">
             <img src="img/Imagen de WhatsApp 2025-10-31 a las 16.57.58_a02668a7.jpg"  width="400" alt="">"
         <img src="img/Imagen de WhatsApp 2025-10-31 a las 16.57.58_569bb5f9.jpg"  width="400" alt="">
