--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <hr>
         </div>
         <div class="parrafo">
-            <p>Buenas mi estimado, mi objetivo es incorporarme con participacion y compromiso, con el fin de acumular experiencia,trabajar en equipo, lograr un buen desempeño y rendimiento de mis aptitudes personales e intelectuales, y lograr un desarrollo optimo y profecional.</p>
+            <p>Buenas mi estimado, mi objetivo es incorporarme con participacion y compromiso, con el fin de acumular experiencia,trabajar en equipo, lograr un buen desempeño y rendimiento de mis aptitudes personales e intelectuales, y lograr un desarrollo optimo y profesional.</p>
         </div>
     </div>
 
